--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,31 +88,11 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="Hello World"
+        android:text=" "
         android:textAppearance="?android:textAppearanceLarge"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="381dp" />
 
-    <TextView
-        android:id="@+id/textview2"
-        android:layout_width="145dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Hello World"
-        android:textAppearance="?android:textAppearanceLarge"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="298dp" />
 
-    <TextView
-        android:id="@+id/textview3"
-        android:layout_width="145dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Hello World"
-        android:textAppearance="?android:textAppearanceLarge"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="341dp" />
 
 </android.support.constraint.ConstraintLayout>
